--- a/vagas/templates/vagas/cadastrar_vagaOfertada.html
+++ b/vagas/templates/vagas/cadastrar_vagaOfertada.html
@@ -104,6 +104,9 @@
                 {{f.errors}}
             </div>
             {% endfor %}
+            <a href="#" class="btn btn-primary text-white w-100 mt-3">
+                CANDITATAR-SE
+            </a>
             {% if tipo_cadastro != '' %}
             <button type="submit" class="btn btn-primary text-white w-100 mt-3">
             {{tipo_cadastro}}
