--- a/vagas/templates/vagas/encaminhamento.html
+++ b/vagas/templates/vagas/encaminhamento.html
@@ -31,8 +31,8 @@
             {% csrf_token %}            
             <label class="text-uppercase" for="nome">Nome do candidato:</label>        
             <input type="text" name="nome" class="form-control">                         
-            <label class="text-uppercase mt-3" for="nome">CPF do candidato:</label>        
-            <input type="text" name="cpf" class="form-control" onkeydown="mascara(this,icpf)"> 
+            <!-- <label class="text-uppercase mt-3" for="nome">CPF do candidato:</label>        
+            <input type="text" name="cpf" class="form-control" onkeydown="mascara(this,icpf)">  -->
             <button type="submit" class="btn btn-primary text-white w-100 mt-3 text-uppercase ">
             Gerar Encaminhamento
             </button>
