--- a/vagas/templates/vagas/cadastrar_vagaOfertada.html
+++ b/vagas/templates/vagas/cadastrar_vagaOfertada.html
@@ -104,7 +104,7 @@
                 {{f.errors}}
             </div>
             {% endfor %}
-            <a href="#" class="btn btn-primary text-white w-100 mt-3">
+            <a href="{% url 'vagas:candidatarse' id %}" class="btn btn-primary text-white w-100 mt-3">
                 CANDITATAR-SE
             </a>
             {% if tipo_cadastro != '' %}
