--- a/vagas/static/assets/css/login.css
+++ b/vagas/static/assets/css/login.css
@@ -24,10 +24,11 @@ input{
     box-shadow:  4px 4px 2px #507b9ba9;
     background-color: #329787;
     color: white;  
+    transition: transform 0.8s;
 }
 .marcar:hover{
     color: white;
-    padding: 10px 18px;
+    transform: scale(1.2);
     box-shadow:  4px 4px 2px #507b9bd2;
 }
 .marcar:focus{
