--- a/vagas/templates/vagas/cadastrar_empresa.html
+++ b/vagas/templates/vagas/cadastrar_empresa.html
@@ -79,7 +79,7 @@
         }
         #form_cadastro_vaga button:hover{
             background-color: #329787 !important;
-            border-color: #329787
+            border-color: #329787;
             color: white !important;
         }
         #form_cadastro button, .btn-primary{
