--- a/vagas/templates/base_site.html
+++ b/vagas/templates/base_site.html
@@ -28,7 +28,7 @@
                   <li><a class="dropdown-item" href="{% url 'vagas:cadastrar' %}"><i class="fas fa-bullhorn me-2"></i>Vaga Ofertada</a></li>
                 </ul>
             </div>
-            <a class="btn" href="#"><i class="fas fa-chart-pie me-2"></i><span class="mobile_hidden">Indicadores</span></a>
+            <a class="btn" href="{% url 'vagas:vagas_com_candidatos' %}"><i class="fas fa-chart-pie me-2"></i><span class="mobile_hidden">Indicadores</span></a>
             <a class="btn ms-auto" href="/admin"><i class="fas fa-user-cog me-2"></i><span class="mobile_hidden">Administração</span></a>
             {% else %}
             {% if request.user.is_authenticated %}
