--- a/vagas/templates/vagas/cadastrar_vagaOfertada.html
+++ b/vagas/templates/vagas/cadastrar_vagaOfertada.html
@@ -44,7 +44,7 @@
         <p><b>Para mais informações sobre essa vaga:</b></p>
         <p><i class="fab fa-whatsapp me-1"></i> (22) 99793-5451</p>
         <p><i class="fas fa-phone-alt me-1"></i> (22) 2525-9205</p>
-        <p><i class="fas fa-map-marker-alt me-2"></i> Av. Alberto Braunes - 223 (Antiga rodoviária)</p>
+        <p><i class="fas fa-map-marker-alt me-2"></i> Av. Alberto Braune - 223 (Antiga rodoviária)</p>
        </div>
     </div>
   </div>
@@ -104,7 +104,7 @@
             {% endfor %}
             {% if tipo_cadastro == '' %}
             <a href="{% url 'vagas:candidatarse' id %}" class="btn btn-primary text-white w-100 mt-3">
-                CANDITATAR-SE
+                CANDIDATAR-SE
             </a>
             {% endif %}
             {% if tipo_cadastro != '' %}
