--- a/vagas/templates/vagas/vagas_disponiveis.html
+++ b/vagas/templates/vagas/vagas_disponiveis.html
@@ -137,7 +137,7 @@
             div=document.getElementById(this.id+'-div')
             
             cargo=document.getElementById(this.id+'-cargo').innerText.toLowerCase() 
-            console.log(value + ' ' +cargo.indexOf(value))               
+            // console.log(value + ' ' +cargo.indexOf(value))               
             if (cargo.indexOf(value)>=0) {
                 
                 div.style.display = "block";
