--- a/vagas/templates/vagas/vagas_com_candidatos.html
+++ b/vagas/templates/vagas/vagas_com_candidatos.html
@@ -6,6 +6,7 @@
 {% block main_conteudo %}
 {% load widget_tweaks %}   
 {% load bootstrap5 %}  
+{% load qntvagas %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
 {% if success.0 %}
 <div class="row px-4 mb-3">
@@ -17,24 +18,34 @@
 <div class="row">    
     <div class="col d-flex">
         <h2 class="text-start text-uppercase">{{ tipo_cadastro }} VAGAS COM CANDIDATOS</h2>   
+		<div class="ms-auto">
+			<button class="btn btn-btfl"><i class="fas fa-filter me-2"></i>Filtrar</button>
+		</div>
     </div>
   </div>
  
 <form id="form_cadastro_vaga" {% if tipo_cadastro != '' %}method="post"{% endif %} class="form w-100 text-start">
-    <div class="row">
-        <div class="col">
-            <h4>Detalhes da vaga:</h4>
+    <div class="row px-4 text-center my-3">
+		<div class="col border py-4 me-2 indicador d-flex flex-column">
+            <b>Total de candidatos do Balcão</b>
+			<span>{{balcao}}</span>
+        </div>
+        <div class="col border py-4 ms-2 indicador d-flex flex-column">
+            <b>Total de Candidatos do Sistema</b>
+			<span>{{online}}</span>
         </div>
     </div>
     <div class="row">
         <div class="col pt-3 px-5">
-			<table class="table table-hover">
+			<table class="table table-hover text-center">
 				<thead>
 					<tr>
+						
+						<th class="text-center">Qnt. Candidatos</th>						
+						<th scope="col" >Cargo</th>
 						<th scope="col">Vagas</th>
-						<th scope="col">Cargo</th>
 						<th scope="col">Experiência</th>
-						<th scope="col">Escolaridade</th>
+						<th scope="col">Escolaridade</th>						
 						<th scope="col"></th>
 			
 					  </tr>
@@ -42,10 +53,11 @@
 					<tbody>
 					{% for vaga in vagas %}        
 					<tr style="background-color: rgba(230, 230, 230, 0.274);"></tr>
-						<th scope="row">{{vaga.quantidadeVagas}}</th>
-						<td>{{vaga.cargo.nome}}</td>                        
+						<th class="text-center">{{vaga|qntcandidatos}}</th>						
+						<td>{{vaga}}</td>              
+						<td scope="row">{{vaga.quantidadeVagas}}</td>          
 						<td>{{vaga.experiencia}}</td>      
-						<td>{{vaga.escolaridade}}</td>
+						<td>{{vaga.escolaridade}}</td>						
 						<td><a target="_blank" href="{% url 'vagas:listar_candidatos' vaga.id %}">Listar Candidatos</a></td>  
 					  </tr>
 					{% endfor %}
@@ -54,6 +66,13 @@
 			  <style>
 				table{
 				  font-size:  0.9em;
+				}
+				.indicador{
+					background-color: #507B9B;
+					color: white;
+				}
+				.indicador span{
+					font-size: 40pt;
 				}
 			  </style>
         </div>      
