--- a/vagas/templates/vagas/vagas_com_candidatos.html
+++ b/vagas/templates/vagas/vagas_com_candidatos.html
@@ -31,7 +31,7 @@
 			<span>{{balcao}}</span>
         </div>
         <div class="col border py-4 ms-2 indicador d-flex flex-column">
-            <b>Total de Candidatos do Sistema</b>
+            <b>Total de Candidatos Online</b>
 			<span>{{online}}</span>
         </div>
     </div>
