--- a/vagas/templates/vagas/encaminhar.html
+++ b/vagas/templates/vagas/encaminhar.html
@@ -94,7 +94,7 @@
                 Nova Friburgo, {{date}}.
             </p>
             <p style="text-align: center; margin: 80px; text-indent: 0;">
-                João Carlos Rodrigues<br>
+                João Carlos Rodrigues <br>Matrícula: 063.108<br>
                 Subsecretário de Trabalho e Renda                
             </p>
 
