--- a/vagas/templates/vagas/vagas_com_candidatos.html
+++ b/vagas/templates/vagas/vagas_com_candidatos.html
@@ -8,6 +8,31 @@
 {% load bootstrap5 %}  
 {% load qntvagas %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Work',     11],
+          ['Eat',      2],
+          ['Commute',  2],
+          ['Watch TV', 2],
+          ['Sleep',    7]
+        ]);
+
+        var options = {
+          title: 'My Daily Activities'
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+        chart.draw(data, options);
+      }
+    </script>
 {% if success.0 %}
 <div class="row px-4 mb-3">
     <div class="col d-flex bg-success py-2">
@@ -35,6 +60,11 @@
 			<span>{{online}}</span>
         </div>
     </div>
+	<div class="row">
+		<div class="col d-flex">
+			<div class="mx-auto" id="piechart" style="width: 900px; height: 500px;"></div>
+		</div>
+	</div>
     <div class="row">
         <div class="col pt-3 px-5">
 			<table class="table table-hover text-center">
