--- a/vagas/templates/vagas/vagas_disponiveis.html
+++ b/vagas/templates/vagas/vagas_disponiveis.html
@@ -94,6 +94,7 @@
                         {% if vaga.regime != '' %}
                         <b>Regime:</b> {{vaga.regime}}
                       {% endif %}</b></span>
+                      <span class="ms-4"><b>Bairro:</b> {{vaga.empresa.bairro}}</span>
                     </div>
                    <div>
 
