--- a/vagas/templates/vagas/imprimir_vagas.html
+++ b/vagas/templates/vagas/imprimir_vagas.html
@@ -79,6 +79,10 @@
                         <td scope="row">{{vaga.quantidadeVagas}}</td>
                       </tr>
                     {% endfor %}
+                    <tr>
+                        Whatsapp para maiores informações: (22) 99793-5451<br>
+                        Candidate-se pelo site: casadotrabalhador.rj.gov.br
+                    </tr>
                 </tbody>
               </table>
         </main>
