--- a/vagas/templates/vagas/imprimir_vagas.html
+++ b/vagas/templates/vagas/imprimir_vagas.html
@@ -78,13 +78,14 @@
                         <td>{{vaga.escolaridade}}</td>                     
                         <td scope="row">{{vaga.quantidadeVagas}}</td>
                       </tr>
-                    {% endfor %}
-                    <tr>
-                        Whatsapp para maiores informações: (22) 99793-5451<br>
-                        Candidate-se pelo site: casadotrabalhador.rj.gov.br
-                    </tr>
+                    {% endfor %}                    
                 </tbody>
               </table>
+              <h2 class="text-center">
+                    Total de vagas: {{total}}<br><br>
+                    Whatsapp para maiores informações: (22) 99793-5451<br>
+                    Candidate-se pelo site: casadotrabalhador.pmnf.rj.gov.br
+                </h2>
         </main>
     </div>
 </body>
