--- a/vagas/templates/vagas/encaminhar.html
+++ b/vagas/templates/vagas/encaminhar.html
@@ -47,7 +47,7 @@
             <p>Pedimos ao candidato que busque fazer contato:</p>            
             {% if vaga.empresa.contato_presencial %}
             <p style="margin: 0 30px;">                
-            De forma presencial, munido de seu currículo,  no endereço: <br>
+            De forma presencial, munido de seu currículo e com este encaminhamento em mãos,  no endereço: <br>
             <span style="text-decoration: underline; margin: 0px 30px;">{{vaga.empresa.endereco}}</span></p>
             {% endif %}
             {% if vaga.empresa.contato_telefone %}
