--- a/vagas/static/assets/css/template.css
+++ b/vagas/static/assets/css/template.css
@@ -4,10 +4,15 @@ html, body{
 }
 body{    
     background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
 }
 header{
     min-width: 410px;;
     background-color: white;
+}
+footer{
+    margin-top: auto;
 }
 #main-logo{
     height: 5rem;
