--- a/vagas/templates/base_template.html
+++ b/vagas/templates/base_template.html
@@ -28,7 +28,7 @@
     <main class="">
         {% block main %}{% endblock %}
     </main>
-    <footer class="row py-3 border" style="background-color:white;">
+    <footer class=" py-3 border" style="background-color:white;">
         <div class="col d-flex">
             <div class="mx-auto d-flex flex-column ">
                 <span>Desenvolvido em conjunto com</span>
