--- a/vagas/templates/vagas/vagas_com_candidatos.html
+++ b/vagas/templates/vagas/vagas_com_candidatos.html
@@ -54,8 +54,18 @@
 			<span>{{balcao}}</span>
         </div>
         <div class="col border py-4 ms-2 indicador d-flex flex-column">
-            <b>Total de Candidatos Online</b>
+            <b>Total de candidatos Online</b>
 			<span>{{online}}</span>
+        </div>
+    </div>
+	<div class="row px-4 text-center my-3">
+		<div class="col border py-4 me-2 indicador d-flex flex-column">
+            <b>Total de candidatos desativados do Balcão</b>
+			<span>{{balcao2}}</span>
+        </div>
+        <div class="col border py-4 ms-2 indicador d-flex flex-column">
+            <b>Total de candidatos desativados Online</b>
+			<span>{{online2}}</span>
         </div>
     </div>
 	<div class="row">
