--- a/vagas/templates/vagas/vagas_com_candidatos.html
+++ b/vagas/templates/vagas/vagas_com_candidatos.html
@@ -59,11 +59,11 @@
         </div>
     </div>
 	<div class="row px-4 text-center my-3">
-		<div class="col border py-4 me-2 indicador d-flex flex-column">
+		<div class="col border py-4 me-2 indicador d-flex flex-column bg-secondary">
             <b>Total de candidatos desativados do Balcão</b>
 			<span>{{balcao2}}</span>
         </div>
-        <div class="col border py-4 ms-2 indicador d-flex flex-column">
+        <div class="col border py-4 ms-2 indicador d-flex flex-column bg-secondary">
             <b>Total de candidatos desativados Online</b>
 			<span>{{online2}}</span>
         </div>
