--- a/vagas/templates/vagas/vagas_com_candidatos.html
+++ b/vagas/templates/vagas/vagas_com_candidatos.html
@@ -50,7 +50,7 @@
   </div>
  
 <form id="form_cadastro_vaga" {% if tipo_cadastro != '' %}method="post"{% endif %} class="form w-100 text-start">
-	<div class="row px-4 text-center mt-3">
+	<div class="row px-4 mt-3">
 		<h3>Candidatos por vagas em aberto</h3>
 	</div>
     <div class="row px-4 text-center my-3">
