--- a/vagas/templates/vagas/vagas_com_candidatos.html
+++ b/vagas/templates/vagas/vagas_com_candidatos.html
@@ -50,10 +50,10 @@
   </div>
  
 <form id="form_cadastro_vaga" {% if tipo_cadastro != '' %}method="post"{% endif %} class="form w-100 text-start">
-	<div class="row px-4 mt-3">
+	<div class="row px-2 mt-3">
 		<h3>Candidatos por vagas em aberto</h3>
 	</div>
-    <div class="row px-4 text-center my-3">
+    <div class="row px-4 text-center mb-3">
 		<div class="col border py-4 me-2 indicador d-flex flex-column">
             <b>Total de candidatos do Balcão</b>
 			<span>{{balcao}}</span>
@@ -63,10 +63,10 @@
 			<span>{{online}}</span>
         </div>
     </div>
-	<div class="row px-4 mt-3">
+	<div class="row px-2 mt-3">
 		<h3>Candidatos por vagas encerradas</h3>
 	</div>
-	<div class="row px-4 text-center my-3">
+	<div class="row px-4 text-center mb-3">
 		<div class="col border py-4 me-2 indicador d-flex flex-column bg-secondary">
             <b>Total de candidatos do Balcão</b>
 			<span>{{balcao2}}</span>
