pro dia nascer feliz

--- a/vagas/templates/vagas/encaminhar.html
+++ b/vagas/templates/vagas/encaminhar.html
@@ -40,7 +40,7 @@
             <span style="margin-top: 40px;">Prezado(a),</span>
             <p>
                 A CASA DO TRABALHADOR, no exercício de suas atribuições legais e regimentais,  
-                encaminha pelo presente o candidato <b>{{candidato.nome}}</b>, 
+                encaminha pelo presente o candidato <b>{{candidato.nome}}</b>, portador do cpf de nº <b>{{candidato.cpf}}</b>, 
                 interessado na vaga de <b>{{vaga.cargo.nome}}</b>{% if not vaga.empresa.ocultar %},
                 à empresa <b>{{vaga.empresa.nome}}</b> de CNPJ <b id="cnpj">{{vaga.empresa.cnpj}}</b>{% endif %}.
             </p>
